migrating tests - typing input and selecting tags

--- a/test/acceptance/index_old.html
+++ b/test/acceptance/index_old.html
@@ -104,35 +104,35 @@
 					input = $('#test').find('#tags');
 				});
 
-				it('should create a new tag when a comma is typed', function() {
-					var tagged = tag.tagify('#tags');
-					input.val('tag1');
-					assert.lengthEquals(tagged.tags(), 0);
-					type(input.first(), COMMA);
-					assert.deepEqual(tagged.tags(), ['tag1']);
-				});
+				// it('should create a new tag when a comma is typed', function() {
+				// 	var tagged = tag.tagify('#tags');
+				// 	input.val('tag1');
+				// 	assert.lengthEquals(tagged.tags(), 0);
+				// 	type(input.first(), COMMA);
+				// 	assert.deepEqual(tagged.tags(), ['tag1']);
+				// });
 
-				it('should not duplicate tag', function() {
-					input.val('tag1');
-					var tagged = tag.tagify('#tags');
-					type(input.first(), COMMA);
-					assert.deepEqual(tagged.tags(), ['tag1']);
-				});
+				// it('should not duplicate tag', function() {
+				// 	input.val('tag1');
+				// 	var tagged = tag.tagify('#tags');
+				// 	type(input.first(), COMMA);
+				// 	assert.deepEqual(tagged.tags(), ['tag1']);
+				// });
 
-				it('should create a new tag when enter is typed', function() {
-					var tagged = tag.tagify('#tags');
-					input.val('tag1');
-					assert.lengthEquals(tagged.tags(), 0);
-					type(input.first(), ENTER);
-					assert.deepEqual(tagged.tags(), ['tag1']);
-				});
+				// it('should create a new tag when enter is typed', function() {
+				// 	var tagged = tag.tagify('#tags');
+				// 	input.val('tag1');
+				// 	assert.lengthEquals(tagged.tags(), 0);
+				// 	type(input.first(), ENTER);
+				// 	assert.deepEqual(tagged.tags(), ['tag1']);
+				// });
 
-				it('should not try to add tags when enter is typed and no text is present in the input', function() {
-					var tagged = tag.tagify('#tags');
-					input.val('');
-					type(input.first(), ENTER);
-					assert.notOk(input.hasClass('error'));
-				});
+				// it('should not try to add tags when enter is typed and no text is present in the input', function() {
+				// 	var tagged = tag.tagify('#tags');
+				// 	input.val('');
+				// 	type(input.first(), ENTER);
+				// 	assert.notOk(input.hasClass('error'));
+				// });
 
 
 				it('should create a new tag when tab is typed', function() {
@@ -150,55 +150,55 @@
 					assert.notOk(input.hasClass('error'));
 				});
 
-				it('should not select nor remove last tag when has text and backspace is typed', function() {
-					input.val('tag1, tag2');
-					var tagged = tag.tagify('#tags');
-					input.val(input.val() + 'another-tag');
-					assert.lengthEquals(tagged.tags(), 2);
-					type(input.first(), BACKSPACE);
-					assert.deepEqual(tagged.tags(), ['tag1', 'tag2']);
-					assert.isNull(tagged.selected());
-				});
+				// it('should not select nor remove last tag when has text and backspace is typed', function() {
+				// 	input.val('tag1, tag2');
+				// 	var tagged = tag.tagify('#tags');
+				// 	input.val(input.val() + 'another-tag');
+				// 	assert.lengthEquals(tagged.tags(), 2);
+				// 	type(input.first(), BACKSPACE);
+				// 	assert.deepEqual(tagged.tags(), ['tag1', 'tag2']);
+				// 	assert.isNull(tagged.selected());
+				// });
 
-				it('should do nothing when backspace is typed and there are no tags', function() {
-					var tagged = tag.tagify('#tags');
-					assert.lengthEquals(tagged.tags(), 0);
-					type(input.first(), BACKSPACE);
-					assert.lengthEquals(tagged.tags(), 0);
-					assert.isNull(tagged.selected());
-				});
+				// it('should do nothing when backspace is typed and there are no tags', function() {
+				// 	var tagged = tag.tagify('#tags');
+				// 	assert.lengthEquals(tagged.tags(), 0);
+				// 	type(input.first(), BACKSPACE);
+				// 	assert.lengthEquals(tagged.tags(), 0);
+				// 	assert.isNull(tagged.selected());
+				// });
 
-				it('should do nothing when left arrow is typed and there are no tags', function() {
-					var tagged = tag.tagify('#tags');
-					assert.isNull(tagged.selected());
-					type(input.first(), LEFT_KEY);
-					assert.isNull(tagged.selected());
-				});
+				// it('should do nothing when left arrow is typed and there are no tags', function() {
+				// 	var tagged = tag.tagify('#tags');
+				// 	assert.isNull(tagged.selected());
+				// 	type(input.first(), LEFT_KEY);
+				// 	assert.isNull(tagged.selected());
+				// });
 
-				it('should add all tags in the input when comma is typed', function() {
-					var tagged = tag.tagify('#tags');
-					assert.lengthEquals(tagged.tags(), 0);
-					input.val('tag1, another tag');
-					type(input.first(), COMMA);
-					assert.deepEqual(tagged.tags(), ['tag1', 'another tag']);
-				});
+				// it('should add all tags in the input when comma is typed', function() {
+				// 	var tagged = tag.tagify('#tags');
+				// 	assert.lengthEquals(tagged.tags(), 0);
+				// 	input.val('tag1, another tag');
+				// 	type(input.first(), COMMA);
+				// 	assert.deepEqual(tagged.tags(), ['tag1', 'another tag']);
+				// });
 
-				it('should add all unique tags in the input when comma is typed and there are repeated tags', function() {
-					var tagged = tag.tagify('#tags');
-					assert.lengthEquals(tagged.tags(), 0);
-					input.val('tag1, another tag, tag1, yet another');
-					type(input.first(), COMMA);
-					assert.deepEqual(tagged.tags(), ['tag1', 'another tag', 'yet another']);
-				});
+				// it('should add all unique tags in the input when comma is typed and there are repeated tags', function() {
+				// 	var tagged = tag.tagify('#tags');
+				// 	assert.lengthEquals(tagged.tags(), 0);
+				// 	input.val('tag1, another tag, tag1, yet another');
+				// 	type(input.first(), COMMA);
+				// 	assert.deepEqual(tagged.tags(), ['tag1', 'another tag', 'yet another']);
+				// });
 
-				it('should add tag when key and comma is typed', function() {
-					var tagged = tag.tagify('#tags');
-					input.val('tag1');
-					type(input.first(), COMMA);
-					type(input.first(), CHAR_A);
-					type(input.first(), COMMA);
-					assert.deepEqual(tagged.tags(), ['tag1', 'A']);
-				});
+				// it('should add tag when key and comma is typed', function() {
+				// 	var tagged = tag.tagify('#tags');
+				// 	input.val('tag1');
+				// 	type(input.first(), COMMA);
+				// 	type(input.first(), CHAR_A);
+				// 	type(input.first(), COMMA);
+				// 	assert.deepEqual(tagged.tags(), ['tag1', 'A']);
+				// });
 			});
 
 			describe('Selecting tags of a tagified input', function() {
@@ -207,97 +207,97 @@
 					input = $('#test').find('#tags');
 				});
 
-				it('should have no selected tags after activated', function() {
-					input.val('tag1, tag-to-remove');
-					var tagged = tag.tagify('#tags');
-					assert.isNull(tagged.selected());
-				});
+				// it('should have no selected tags after activated', function() {
+				// 	input.val('tag1, tag-to-remove');
+				// 	var tagged = tag.tagify('#tags');
+				// 	assert.isNull(tagged.selected());
+				// });
 
-				it('should not select tags when pressing left key if input is filled', function() {
-					input.val('tag1, another');
-					var tagged = tag.tagify('#tags');
-					input.val('tag2');
-					type(input.first(), LEFT_KEY);
-					assert.isNull(tagged.selected());
-				});
+				// it('should not select tags when pressing left key if input is filled', function() {
+				// 	input.val('tag1, another');
+				// 	var tagged = tag.tagify('#tags');
+				// 	input.val('tag2');
+				// 	type(input.first(), LEFT_KEY);
+				// 	assert.isNull(tagged.selected());
+				// });
 
-				it('should not select tags if none is selected and right key is pressed', function() {
-					input.val('tag1, tag-to-remove');
-					var tagged = tag.tagify('#tags');
-					assert.isNull(tagged.selected());
-					type(input.first(), RIGHT_KEY);
-					assert.isNull(tagged.selected());
-				});
+				// it('should not select tags if none is selected and right key is pressed', function() {
+				// 	input.val('tag1, tag-to-remove');
+				// 	var tagged = tag.tagify('#tags');
+				// 	assert.isNull(tagged.selected());
+				// 	type(input.first(), RIGHT_KEY);
+				// 	assert.isNull(tagged.selected());
+				// });
 
-				it('should not select tags when pressing right key if input is filled', function() {
-					input.val('tag1, another');
-					var tagged = tag.tagify('#tags');
-					input.val('tag2');
-					type(input.first(), RIGHT_KEY);
-					assert.isNull(tagged.selected());
-				});
+				// it('should not select tags when pressing right key if input is filled', function() {
+				// 	input.val('tag1, another');
+				// 	var tagged = tag.tagify('#tags');
+				// 	input.val('tag2');
+				// 	type(input.first(), RIGHT_KEY);
+				// 	assert.isNull(tagged.selected());
+				// });
 
-				it('should select the last tag when pressing left key if input is empty', function() {
-					input.val('tag1, another');
-					var tagged = tag.tagify('#tags');
-					input.val('');
-					type(input.first(), LEFT_KEY);
-					assert.equal(tagged.selected(), 'another');
-				});
+				// it('should select the last tag when pressing left key if input is empty', function() {
+				// 	input.val('tag1, another');
+				// 	var tagged = tag.tagify('#tags');
+				// 	input.val('');
+				// 	type(input.first(), LEFT_KEY);
+				// 	assert.equal(tagged.selected(), 'another');
+				// });
 
-				it('should select the last tag and not remove it when pressing backspace key if input is empty', function() {
-					input.val('tag1, another');
-					var tagged = tag.tagify('#tags');
-					input.val('');
-					type(input.first(), BACKSPACE);
-					assert.equal(tagged.selected(), 'another');
-					assert.deepEqual(tagged.tags(), ['tag1', 'another']);
-				});
+				// it('should select the last tag and not remove it when pressing backspace key if input is empty', function() {
+				// 	input.val('tag1, another');
+				// 	var tagged = tag.tagify('#tags');
+				// 	input.val('');
+				// 	type(input.first(), BACKSPACE);
+				// 	assert.equal(tagged.selected(), 'another');
+				// 	assert.deepEqual(tagged.tags(), ['tag1', 'another']);
+				// });
 
-				it('should select the tag before when pressing left key with a tag selected', function() {
-					input.val('tag1, another');
-					var tagged = tag.tagify('#tags');
-					input.val('');
-					type(input.first(), LEFT_KEY);
-					type(input.first(), LEFT_KEY);
-					assert.equal(tagged.selected(), 'tag1');
-				});
+				// it('should select the tag before when pressing left key with a tag selected', function() {
+				// 	input.val('tag1, another');
+				// 	var tagged = tag.tagify('#tags');
+				// 	input.val('');
+				// 	type(input.first(), LEFT_KEY);
+				// 	type(input.first(), LEFT_KEY);
+				// 	assert.equal(tagged.selected(), 'tag1');
+				// });
 
-				it('should keep the first tag selected when pressing left key with the first tag selected', function() {
-					input.val('tag1, another');
-					var tagged = tag.tagify('#tags');
-					input.val('');
-					type(input.first(), LEFT_KEY);
-					type(input.first(), LEFT_KEY);
-					type(input.first(), LEFT_KEY);
-					assert.equal(tagged.selected(), 'tag1');
-				});
+				// it('should keep the first tag selected when pressing left key with the first tag selected', function() {
+				// 	input.val('tag1, another');
+				// 	var tagged = tag.tagify('#tags');
+				// 	input.val('');
+				// 	type(input.first(), LEFT_KEY);
+				// 	type(input.first(), LEFT_KEY);
+				// 	type(input.first(), LEFT_KEY);
+				// 	assert.equal(tagged.selected(), 'tag1');
+				// });
 
-				it('should deselect the last tag if it was previously selected when the right key is pressed', function() {
-					input.val('tag1, another');
-					var tagged = tag.tagify('#tags');
-					input.val('');
-					type(input.first(), LEFT_KEY);
-					type(input.first(), RIGHT_KEY);
-					assert.isNull(tagged.selected());
-				});
+				// it('should deselect the last tag if it was previously selected when the right key is pressed', function() {
+				// 	input.val('tag1, another');
+				// 	var tagged = tag.tagify('#tags');
+				// 	input.val('');
+				// 	type(input.first(), LEFT_KEY);
+				// 	type(input.first(), RIGHT_KEY);
+				// 	assert.isNull(tagged.selected());
+				// });
 
-				it('should select the next tag when the right key is pressed and there is next tag', function() {
-					input.val('tag1, another');
-					var tagged = tag.tagify('#tags');
-					input.val('');
-					type(input.first(), LEFT_KEY);
-					type(input.first(), LEFT_KEY);
-					type(input.first(), RIGHT_KEY);
-					assert.equal(tagged.selected(), 'another');
-				});
+				// it('should select the next tag when the right key is pressed and there is next tag', function() {
+				// 	input.val('tag1, another');
+				// 	var tagged = tag.tagify('#tags');
+				// 	input.val('');
+				// 	type(input.first(), LEFT_KEY);
+				// 	type(input.first(), LEFT_KEY);
+				// 	type(input.first(), RIGHT_KEY);
+				// 	assert.equal(tagged.selected(), 'another');
+				// });
 
-				it('should remove tag when close button was clicked', function() {
-					input.val('tag1, another');
-					var tagged = tag.tagify('#tags');
-					$('.tag .close').first().click();
-					assert.equal(tagged.tags(), 'another');
-				});
+				// it('should remove tag when close button was clicked', function() {
+				// 	input.val('tag1, another');
+				// 	var tagged = tag.tagify('#tags');
+				// 	$('.tag .close').first().click();
+				// 	assert.equal(tagged.tags(), 'another');
+				// });
 			});
 
 			describe('When tagging', function() {
