--- a/test/acceptance/index_old.html
+++ b/test/acceptance/index_old.html
@@ -403,143 +403,143 @@
 					})
 				})
 				describe('Updating required attribute', function() {
-					it('should keep required attribute when activating without tags', function() {
-						input.val('');
-						input.attr('required', '');
-						tag.tagify('#tags');
-						assert.notOk(input.filter('required').isEmpty());
-					});
+					// it('should keep required attribute when activating without tags', function() {
+					// 	input.val('');
+					// 	input.attr('required', '');
+					// 	tag.tagify('#tags');
+					// 	assert.notOk(input.filter('required').isEmpty());
+					// });
 
-					it('should keep required attribute when typing without tags', function() {
-						input.val('');
-						input.attr('required', '');
-						tag.tagify('#tags');
-						type(input.first(), CHAR_A);
-						assert.notOk(input.filter('required').isEmpty());
-					});
+					// it('should keep required attribute when typing without tags', function() {
+					// 	input.val('');
+					// 	input.attr('required', '');
+					// 	tag.tagify('#tags');
+					// 	type(input.first(), CHAR_A);
+					// 	assert.notOk(input.filter('required').isEmpty());
+					// });
 
-					it('should remove required attribute when add tag', function() {
-						input.attr('required', '');
-						input.val('tag');
-						tag.tagify('#tags');
-						assert.ok(input.filter('required').isEmpty());
-					});
+					// it('should remove required attribute when add tag', function() {
+					// 	input.attr('required', '');
+					// 	input.val('tag');
+					// 	tag.tagify('#tags');
+					// 	assert.ok(input.filter('required').isEmpty());
+					// });
 
-					it('should remove required attribute after typing first tag', function() {
-						input.val('');
-						input.attr('required', '');
-						tag.tagify('#tags');
-						type(input.first(), CHAR_A);
-						type(input.first(), COMMA);
-						assert.ok(input.filter('required').isEmpty());
-					});
+					// it('should remove required attribute after typing first tag', function() {
+					// 	input.val('');
+					// 	input.attr('required', '');
+					// 	tag.tagify('#tags');
+					// 	type(input.first(), CHAR_A);
+					// 	type(input.first(), COMMA);
+					// 	assert.ok(input.filter('required').isEmpty());
+					// });
 
-					it('should restore required attribute after erasing last tag', function() {
-						input.val('tag');
-						input.attr('required', '');
-						tag.tagify('#tags');
-						type(input.first(), BACKSPACE);
-						type(input.first(), BACKSPACE);
-						assert.notOk(input.filter('required').isEmpty());
-					});
+					// it('should restore required attribute after erasing last tag', function() {
+					// 	input.val('tag');
+					// 	input.attr('required', '');
+					// 	tag.tagify('#tags');
+					// 	type(input.first(), BACKSPACE);
+					// 	type(input.first(), BACKSPACE);
+					// 	assert.notOk(input.filter('required').isEmpty());
+					// });
 
-					it('should not restore required attribute if there are still tags after erasing a tag', function() {
-						input.val('tag1, tag2');
-						input.attr('required', '');
-						tag.tagify('#tags');
-						type(input.first(), BACKSPACE);
-						type(input.first(), BACKSPACE);
-						assert.ok(input.filter('required').isEmpty());
-					});
+					// it('should not restore required attribute if there are still tags after erasing a tag', function() {
+					// 	input.val('tag1, tag2');
+					// 	input.attr('required', '');
+					// 	tag.tagify('#tags');
+					// 	type(input.first(), BACKSPACE);
+					// 	type(input.first(), BACKSPACE);
+					// 	assert.ok(input.filter('required').isEmpty());
+					// });
 
-					it('should not put required attribute after erasing last tag if the input was not required', function() {
-						input.val('tag');
-						tag.tagify('#tags');
-						type(input.first(), BACKSPACE);
-						type(input.first(), BACKSPACE);
-						assert.ok(input.filter('required').isEmpty());
-					});
+					// it('should not put required attribute after erasing last tag if the input was not required', function() {
+					// 	input.val('tag');
+					// 	tag.tagify('#tags');
+					// 	type(input.first(), BACKSPACE);
+					// 	type(input.first(), BACKSPACE);
+					// 	assert.ok(input.filter('required').isEmpty());
+					// });
 				});
 
 				describe('Updating maxlength', function() {
-					it('should not update maxlength after adding a tag if maxlength is not present', function() {
-						assert.isNull(input.attr('maxlength'));
-						input.val('tag');
-						tag.tagify('#tags');
-						assert.isNull(input.attr('maxlength'));
-					});
+					// it('should not update maxlength after adding a tag if maxlength is not present', function() {
+					// 	assert.isNull(input.attr('maxlength'));
+					// 	input.val('tag');
+					// 	tag.tagify('#tags');
+					// 	assert.isNull(input.attr('maxlength'));
+					// });
 
-					it('should update maxlength accounting for the separator after adding a single tag if maxlength is present', function() {
-						input.val('tag');
-						input.attr('maxlength', '200');
-						tag.tagify('#tags');
-						assert.equal(input.attr('maxlength'), '196');
-					});
+					// it('should update maxlength accounting for the separator after adding a single tag if maxlength is present', function() {
+					// 	input.val('tag');
+					// 	input.attr('maxlength', '200');
+					// 	tag.tagify('#tags');
+					// 	assert.equal(input.attr('maxlength'), '196');
+					// });
 
-					it('should update maxlength after adding a second tag if maxlength is present', function() {
-						var tag1 = 'tag1',
-							tag2 = 'tag2',
-							separatorLength = 1,
-							initialMaxlength = 200,
-							finalMaxlength = initialMaxlength - tag1.length - separatorLength - tag2.length - separatorLength;
+					// it('should update maxlength after adding a second tag if maxlength is present', function() {
+					// 	var tag1 = 'tag1',
+					// 		tag2 = 'tag2',
+					// 		separatorLength = 1,
+					// 		initialMaxlength = 200,
+					// 		finalMaxlength = initialMaxlength - tag1.length - separatorLength - tag2.length - separatorLength;
 
-						input.val(tag1);
-						input.attr('maxlength', '200');
-						tag.tagify('#tags');
-						input.val(tag2);
-						type(input.first(), COMMA);
-						assert.equal(input.attr('maxlength'), finalMaxlength);
-					});
+					// 	input.val(tag1);
+					// 	input.attr('maxlength', '200');
+					// 	tag.tagify('#tags');
+					// 	input.val(tag2);
+					// 	type(input.first(), COMMA);
+					// 	assert.equal(input.attr('maxlength'), finalMaxlength);
+					// });
 
-					it('should not allow negative values for maxlength when adding tags', function() {
-						input.val('senhoru,vasco,thiago');
-						input.attr('maxlength', '20');
-						tag.tagify('#tags');
-						assert.equal(input.attr('maxlength'), '0');
-					});
+					// it('should not allow negative values for maxlength when adding tags', function() {
+					// 	input.val('senhoru,vasco,thiago');
+					// 	input.attr('maxlength', '20');
+					// 	tag.tagify('#tags');
+					// 	assert.equal(input.attr('maxlength'), '0');
+					// });
 
-					it('should update maxlength consistently after reaching maxlength', function() {
-						input.val('senhoru,vasco,thiago');
-						input.attr('maxlength', '20');
-						tag.tagify('#tags');
-						// remove first
-						type(input.first(), BACKSPACE);
-						type(input.first(), BACKSPACE);
-						// remove second
-						type(input.first(), BACKSPACE);
-						type(input.first(), BACKSPACE);
-						// remove third
-						type(input.first(), BACKSPACE);
-						type(input.first(), BACKSPACE);
-						assert.equal(input.attr('maxlength'), '20');
-					});
+					// it('should update maxlength consistently after reaching maxlength', function() {
+					// 	input.val('senhoru,vasco,thiago');
+					// 	input.attr('maxlength', '20');
+					// 	tag.tagify('#tags');
+					// 	// remove first
+					// 	type(input.first(), BACKSPACE);
+					// 	type(input.first(), BACKSPACE);
+					// 	// remove second
+					// 	type(input.first(), BACKSPACE);
+					// 	type(input.first(), BACKSPACE);
+					// 	// remove third
+					// 	type(input.first(), BACKSPACE);
+					// 	type(input.first(), BACKSPACE);
+					// 	assert.equal(input.attr('maxlength'), '20');
+					// });
 
-					it('should update maxlength consistently after missing maxlength by one', function() {
-						input.val('senhor,vasco,thiago');
-						input.attr('maxlength', '20');
-						tag.tagify('#tags');
-						// cannot fit tags anymore
-						assert.equal(input.attr('maxlength'), '0');
-						// remove first
-						type(input.first(), BACKSPACE);
-						type(input.first(), BACKSPACE);
-						// remove second
-						type(input.first(), BACKSPACE);
-						type(input.first(), BACKSPACE);
-						// remove third
-						type(input.first(), BACKSPACE);
-						type(input.first(), BACKSPACE);
-						assert.equal(input.attr('maxlength'), '20');
-					});
+					// it('should update maxlength consistently after missing maxlength by one', function() {
+					// 	input.val('senhor,vasco,thiago');
+					// 	input.attr('maxlength', '20');
+					// 	tag.tagify('#tags');
+					// 	// cannot fit tags anymore
+					// 	assert.equal(input.attr('maxlength'), '0');
+					// 	// remove first
+					// 	type(input.first(), BACKSPACE);
+					// 	type(input.first(), BACKSPACE);
+					// 	// remove second
+					// 	type(input.first(), BACKSPACE);
+					// 	type(input.first(), BACKSPACE);
+					// 	// remove third
+					// 	type(input.first(), BACKSPACE);
+					// 	type(input.first(), BACKSPACE);
+					// 	assert.equal(input.attr('maxlength'), '20');
+					// });
 
-					it('should not update maxlength after removing a tag if maxlength is not present', function() {
-						assert.isNull(input.attr('maxlength'));
-						input.val('tag');
-						tag.tagify('#tags');
-						type(input.first(), BACKSPACE);
-						type(input.first(), BACKSPACE);
-						assert.isNull(input.attr('maxlength'));
-					});
+					// it('should not update maxlength after removing a tag if maxlength is not present', function() {
+					// 	assert.isNull(input.attr('maxlength'));
+					// 	input.val('tag');
+					// 	tag.tagify('#tags');
+					// 	type(input.first(), BACKSPACE);
+					// 	type(input.first(), BACKSPACE);
+					// 	assert.isNull(input.attr('maxlength'));
+					// });
 
 					it('should update maxlength after removing last tag if maxlength is present', function() {
 						input.val('tag');
@@ -568,6 +568,7 @@
 					});
 				});
 			});
+
 			describe('Callbacks', function() {
 				beforeEach(function() {
 					$('#test').html('<input id="tags" name="tags-name">')
